@@ -18,4 +18,18 @@
 /* The size of a `long', as computed by sizeof. */
 #define SIZEOF_LONG 4
 
-#define HAVE_RECURSIVE_MUTEXES 1
+/* Define to 1 if you have the declaration of `PTHREAD_MUTEX_RECURSIVE', and
+   to 0 if you don't. */
+#define HAVE_DECL_PTHREAD_MUTEX_RECURSIVE 1
+
+/* Define to 1 if you have the `pthread_mutexattr_settype' function. */
+#define HAVE_PTHREAD_MUTEXATTR_SETTYPE 1
+
+/* Define to 1 if you have working pthread read/write locks */
+#define HAVE_PTHREAD_RWLOCK 1
+
+/* Define to 1 if you have the `pthread_rwlock_timedrdlock' function. */
+#define HAVE_PTHREAD_RWLOCK_TIMEDRDLOCK 1
+
+/* Define to 1 if you have the `pthread_rwlock_timedwrlock' function. */
+#define HAVE_PTHREAD_RWLOCK_TIMEDWRLOCK 1
