@@ -2,7 +2,7 @@
 
 [General Info]
 Version=1
-LastClass=CGraphSettingsPage
+LastClass=CNodePropsGeneral
 LastTemplate=CDialog
 NewFileInclude1=#include "stdafx.h"
 NewFileInclude2=#include "nxcon.h"
@@ -17,20 +17,20 @@ Class9=CMapView
 
 ResourceCount=179
 Resource1=IDD_CP_GENERAL (English (U.S.))
-Resource2=IDD_DCI_TRANSFORM
+Resource2=IDA_DC_EDITOR
 Resource3=IDD_DCI_DATA_EXPORT (English (U.S.))
-Resource4=IDD_EDIT_VARIABLE
-Resource5=IDD_REMOVE_TEMPLATE
+Resource4=IDA_LAST_VALUES
+Resource5=IDD_OBJECT_VPNC_GENERAL
 Class2=CChildView
 Class5=CAboutDlg
 Class6=CControlPanel
 Class8=CMapFrame
 Class10=CLoginDialog
-Resource6=IDA_NETMAP
+Resource6=IDD_OBJECT_COND_SCRIPT
 Class11=CProgressDialog
-Resource7=IDD_NEW_USER
+Resource7=IDD_CREATE_CONDITION
 Class12=CObjectBrowser
-Resource8=IDA_SCRIPT_MANAGER
+Resource8=IDD_DCI_SCHEDULE
 Class13=CObjectPropDlg
 Resource9=IDD_THRESHOLD (English (U.S.))
 Resource10=IDD_SELECT_OBJECT (English (U.S.))
@@ -46,45 +46,45 @@ Resource17=IDD_NEW_USER (English (U.S.))
 Class16=CDebugFrame
 Resource18=IDD_NEW_ACTION (English (U.S.))
 Resource19=IDD_OBJECT_PROPERTIES (English (U.S.))
-Resource20=IDD_DCI_SCHEDULE
+Resource20=IDD_GRAPH_PROP_SETTINGS
 Class17=CObjectPreview
 Resource21=IDA_OBJECT_BROWSER (English (U.S.))
 Class18=CToolBox
 Class19=CObjectInfoBox
 Class20=CObjectSearchBox
-Resource22=IDD_OBJECT_NODE_POLL
+Resource22=IDD_CREATE_TEMPLATE
 Class21=CEditBox
 Class22=COPGeneral
 Class23=CNodePropsGeneral
 Resource23=IDD_GRAPH_PROPERTIES (English (U.S.))
 Class24=CObjectPropCaps
 Class25=CObjectPropSheet
-Resource24=IDD_GRAPH_PROP_DATA
+Resource24=IDA_TRAP_EDITOR
 Class26=CRequestProcessingDlg
 Resource25=IDD_SELECT_USER (English (U.S.))
 Resource26=IDD_PROGRESS (English (U.S.))
-Resource27=IDD_CREATE_TG
+Resource27=IDD_DESKTOP_SAVE_AS
 Resource28=IDD_DCI_COLLECTION (English (U.S.))
 Class27=CObjectPropsGeneral
 Resource29=IDR_MAINFRAME (English (U.S.))
 Class28=CObjectPropsSecurity
 Resource30=IDD_SAVE_AGENT_CFG (English (U.S.))
-Resource31=IDD_SELECT_USER
-Resource32=IDA_MDI_DEFAULT
+Resource31=IDD_OBJECT_PRESENTATION
+Resource32=IDD_MIB_BROWSER
 Class29=CUserSelectDlg
-Resource33=IDD_SELECT_EVENT
+Resource33=IDD_OBJECT_SECURITY
 Class30=CUserEditor
 Resource34=IDD_DCI_PROPERTIES
 Class31=CNewUserDlg
-Resource35=IDD_THRESHOLD
-Resource36=IDA_TRAP_EDITOR
+Resource35=IDD_CREATE_CONTAINER
+Resource36=IDD_CP_GENERAL
 Class32=CUserPropDlg
 Resource37=IDD_EDIT_VARIABLE (English (U.S.))
-Resource38=IDD_OBJECT_CAPS
+Resource38=IDD_REMOVE_TEMPLATE
 Class33=CGroupPropDlg
-Resource39=IDD_CREATE_NODE
-Resource40=IDA_AGENT_CFG_EDITOR
-Resource41=IDD_OBJECT_PRESENTATION
+Resource39=IDD_SUBMAP_BKGND
+Resource40=IDD_CREATE_NODE
+Resource41=IDD_OBJECT_STATUS
 Resource42=IDA_ACTION_EDITOR (English (U.S.))
 Class34=CPasswordChangeDlg
 Class35=CNodeSummary
@@ -100,55 +100,55 @@ Class41=CGraphFrame
 Class42=CDCIThresholdsPage
 Resource46=IDA_OBJECT_TOOLS_EDITOR (English (U.S.))
 Resource47=IDM_CONTEXT (English (U.S.))
-Resource48=IDA_ACTION_EDITOR
+Resource48=IDD_ADD_DCI
 Class43=CThresholdDlg
 Resource49=IDD_DESKTOP_SAVE_AS (English (U.S.))
-Resource50=IDD_DESKTOP_SAVE_AS
+Resource50=IDA_EVENT_EDITOR
 Class44=CMIBBrowserDlg
 Class45=CEventPolicyEditor
 Class46=CRuleList
 Class47=CRuleHeader
 Resource51=IDD_SELECT_AGENT_PARAM (English (U.S.))
-Resource52=IDD_GRAPH_PROP_SETTINGS
+Resource52=IDD_NEW_OBJECT_TOOL
 Class48=CObjectSelDlg
-Resource53=IDA_OBJECT_TOOLS_EDITOR
-Resource54=IDD_SAVE_AGENT_CFG
+Resource53=IDD_CREATE_TG
+Resource54=IDA_OBJECT_TOOLS_EDITOR
 Class49=CRuleCommentDlg
-Resource55=IDD_CP_GENERAL
+Resource55=IDD_OBJTOOL_OPTIONS
 Class50=CEventSelDlg
-Resource56=IDD_CREATE_NETSRV
+Resource56=IDA_OBJECT_BROWSER
 Resource57=IDA_EPP (English (U.S.))
-Resource58=IDD_EDIT_EVENT
+Resource58=IDD_DCI_THRESHOLDS
 Resource59=IDA_PACKAGE_MGR (English (U.S.))
 Resource60=IDD_OBJTOOL_GENERAL (English (U.S.))
 Class51=CObjectPropsPresentation
 Resource61=IDD_CREATE_TEMPLATE (English (U.S.))
-Resource62=IDD_OBJECT_VPNC_GENERAL
+Resource62=IDA_AGENT_CFG_EDITOR
 Class52=CRuleSeverityDlg
-Resource63=IDD_OBJTOOL_COLUMNS
+Resource63=IDD_REQUEST_PROCESSING
 Class53=CRuleAlarmDlg
 Class54=CAlarmBrowser
 Resource64=IDA_MDI_DEFAULT (English (U.S.))
-Resource65=IDD_USER_PROPERTIES
+Resource65=IDD_OBJECT_COND_GENERAL
 Resource66=IDD_EDIT_IP_SUBNET (English (U.S.))
 Resource67=IDD_EDIT_RULE_SEVERITY (English (U.S.))
 Resource68=IDD_ACTION_PROPERTIES (English (U.S.))
 Class55=CConsolePropsGeneral
 Class56=CActionEditor
-Resource69=IDA_PACKAGE_MGR
-Resource70=IDD_EDIT_TRAP_ARG
+Resource69=IDD_ACTION_PROPERTIES
+Resource70=IDD_EDIT_RULE_ALARM
 Class57=CNewActionDlg
-Resource71=IDD_OBJECT_SECURITY
+Resource71=IDD_OBJECT_NODE_POLL
 Class58=CEditActionDlg
-Resource72=IDA_DC_EDITOR
+Resource72=IDD_DCI_TRANSFORM
 Class59=CActionSelDlg
-Resource73=IDD_NEW_ACTION
+Resource73=IDD_SELECT_AGENT_PARAM
 Resource74=IDD_EDIT_TRAP (English (U.S.))
 Resource75=IDD_USER_PROPERTIES (English (U.S.))
-Resource76=IDD_LASTVAL_PROP
+Resource76=IDD_CHANGE_IP
 Class60=CCreateObjectDlg
 Class61=CCreateContainerDlg
-Resource77=IDA_ALARM_BROWSER
+Resource77=IDD_SELECT_EVENT
 Class62=CCreateNodeDlg
 Resource78=IDD_OBJECT_NODE_GENERAL (English (U.S.))
 Resource79=IDT_MAP (English (U.S.))
@@ -158,31 +158,31 @@ Resource81=IDD_LASTVAL_PROP (English (U.S.))
 Class64=CPollNodeDlg
 Resource82=IDD_POLL_NODE (English (U.S.))
 Class65=CNodePoller
-Resource83=IDD_ACTION_PROPERTIES
-Resource84=IDD_GROUP_PROPERTIES
+Resource83=IDD_EDIT_TRAP_ARG
+Resource84=IDD_GRAPH_PROP_DATA
 Class66=CCreateTemplateDlg
 Class67=CCreateTGDlg
-Resource85=IDA_LAST_VALUES
-Resource86=IDD_OBJECT_GENERAL
+Resource85=IDD_SELECT_ACTION
+Resource86=IDD_OBJECT_NETSRV_GENERAL
 Class68=CTrapEditor
-Resource87=IDA_EVENT_EDITOR
-Resource88=IDD_SELECT_OBJECT
-Resource89=IDD_CREATE_CONDITION
+Resource87=IDD_EDIT_RULE_SEVERITY
+Resource88=IDD_EDIT_IP_SUBNET
+Resource89=IDD_NEW_USER
 Class69=CDataQueryDlg
-Resource90=IDD_SELECT_ACTION
+Resource90=IDD_CREATE_NETSRV
 Class70=CTrapEditDlg
 Resource91=IDM_VIEW_SPECIFIC (English (U.S.))
 Class71=CTrapParamDlg
-Resource92=IDD_OBJECT_NODE_GENERAL
-Resource93=IDM_VIEW_SPECIFIC
+Resource92=IDD_THRESHOLD
+Resource93=IDM_CONTEXT
 Class72=CGraphPropDlg
 Class73=CColorSelector
 Class74=CPackageMgr
-Resource94=IDD_OBJECT_COND_GENERAL
+Resource94=IDA_ACTION_EDITOR
 Resource95=IDA_SCRIPT_MANAGER (English (U.S.))
 Resource96=IDD_SET_PASSWORD (English (U.S.))
 Resource97=IDD_DCI_TRANSFORM (English (U.S.))
-Resource98=IDD_SELECT_AGENT_PARAM
+Resource98=IDR_MAINFRAME
 Resource99=IDD_OBJECT_NETSRV_GENERAL (English (U.S.))
 Resource100=IDD_OBJTOOL_OPTIONS (English (U.S.))
 Resource101=IDA_LAST_VALUES (English (U.S.))
@@ -244,7 +244,7 @@ Class102=CWaitView
 Class103=CWebBrowser
 Class104=CSyslogBrowser
 Class105=CLPPList
-Resource129=IDD_INPUT_BOX
+Resource129=IDA_MDI_DEFAULT
 Class106=CDCISchedulePage
 Resource130=IDD_OBJECT_CAPS (English (U.S.))
 Class107=CObjectPropsStatus
@@ -270,54 +270,54 @@ Class119=CMapControlBox
 Resource138=IDD_OBJECT_GENERAL (English (U.S.))
 Class120=CSubmapBkgndDlg
 Resource139=IDD_SUBMAP_BKGND (English (U.S.))
-Resource140=IDD_CREATE_CONTAINER
-Resource141=IDD_OBJECT_STATUS
-Resource142=IDD_MIB_BROWSER
-Resource143=IDD_ABOUTBOX
-Resource144=IDA_AGENT_CONFIG_MANAGER
-Resource145=IDD_CHANGE_PASSWORD
-Resource146=IDD_DCI_DATA_EXPORT
-Resource147=IDD_DCI_THRESHOLDS
-Resource148=IDD_EDIT_RULE_SEVERITY
-Resource149=IDD_EDIT_RULE_COMMENT
-Resource150=IDA_GRAPH
-Resource151=IDD_ADD_DCI
-Resource152=IDA_OBJECT_BROWSER
-Resource153=IDD_OBJECT_COND_SCRIPT
-Resource154=IDM_CONTEXT
-Resource155=IDD_EDIT_RULE_ALARM
-Resource156=IDD_REQUEST_PROCESSING
-Resource157=IDD_OBJTOOL_OPTIONS
-Resource158=IDD_NEW_OBJECT_TOOL
-Resource159=IDD_OBJTOOL_GENERAL
-Resource160=IDD_OBJECT_NETSRV_GENERAL
-Resource161=IDD_EDIT_TRAP
-Resource162=IDD_DATA_QUERY
-Resource163=IDD_SELECT_INTERNAL_ITEM
-Resource164=IDD_SUBMAP_BKGND
-Resource165=IDD_EDIT_IP_SUBNET
-Resource166=IDD_SNMP_WALK
-Resource167=IDD_CHANGE_IP
-Resource168=IDD_COND_DCI_PROP
-Resource169=IDD_OBJECT_RELATIONS
-Resource170=IDR_MAINFRAME
-Resource171=IDA_EPP
+Resource140=IDD_SNMP_WALK
+Resource141=IDD_OBJECT_RELATIONS
+Resource142=IDD_OBJECT_CAPS
+Resource143=IDD_DCI_COLLECTION
+Resource144=IDD_EDIT_TRAP
+Resource145=IDD_SELECT_USER
+Resource146=IDD_INPUT_BOX
+Resource147=IDD_EDIT_VARIABLE
+Resource148=IDD_OBJTOOL_GENERAL
+Resource149=IDD_SAVE_AGENT_CFG
+Resource150=IDD_NEW_ACTION
+Resource151=IDA_PACKAGE_MGR
+Resource152=IDD_SELECT_OBJECT
+Resource153=IDD_DATA_QUERY
+Resource154=IDM_VIEW_SPECIFIC
+Resource155=IDD_USER_PROPERTIES
+Resource156=IDD_OBJTOOL_COLUMNS
+Resource157=IDD_EDIT_EVENT
+Resource158=IDD_ABOUTBOX
+Resource159=IDA_AGENT_CONFIG_MANAGER
+Resource160=IDA_EPP
+Resource161=IDD_LASTVAL_PROP
+Resource162=IDA_DATA_VIEW
+Resource163=IDD_COND_DCI_PROP
+Resource164=IDA_ALARM_BROWSER
+Resource165=IDD_CHANGE_PASSWORD
+Resource166=IDD_OBJECT_GENERAL
+Resource167=IDD_OBJECT_NODE_GENERAL
+Resource168=IDD_SELECT_INTERNAL_ITEM
+Resource169=IDA_NETMAP
+Resource170=IDA_GRAPH
+Resource171=IDD_EDIT_RULE_COMMENT
 Class121=CModuleManager
 Class122=CDesktopManager
-Resource172=IDD_DCI_COLLECTION
-Resource173=IDA_DATA_VIEW
+Resource172=IDD_DCI_DATA_EXPORT
+Resource173=IDD_GROUP_PROPERTIES
 Class123=CCreateCondDlg
 Class124=CCondPropsGeneral
 Class125=CCondPropsScript
 Class126=CCondPropsData
-Resource174=IDA_SERVER_CFG_EDITOR
+Resource174=IDD_CREATE_VPNC
 Class127=CAddDCIDlg
-Resource175=IDD_SET_PASSWORD
+Resource175=IDD_OBJECT_COND_DATA
 Class128=CCondDCIPropDlg
-Resource176=IDD_CREATE_VPNC
+Resource176=IDA_SERVER_CFG_EDITOR
 Class129=CAgentConfigMgr
-Resource177=IDD_OBJECT_COND_DATA
-Resource178=IDD_CREATE_TEMPLATE
+Resource177=IDD_SET_PASSWORD
+Resource178=IDA_SCRIPT_MANAGER
 Class130=CAgentCfgDlg
 Resource179=IDD_AGENT_CONFIG
 
@@ -1209,32 +1209,34 @@ LastObject=COPGeneral
 [DLG:IDD_OBJECT_NODE_GENERAL]
 Type=1
 Class=CNodePropsGeneral
-ControlCount=25
+ControlCount=27
 Control1=IDC_EDIT_NAME,edit,1350631552
 Control2=IDC_EDIT_PRIMARY_IP,edit,1350633600
 Control3=IDC_SELECT_IP,button,1342242816
 Control4=IDC_EDIT_OID,edit,1350633600
 Control5=IDC_COMBO_AUTH,combobox,1344340227
 Control6=IDC_EDIT_SECRET,edit,1350631552
-Control7=IDC_EDIT_PORT,edit,1350639744
-Control8=IDC_EDIT_PROXY,edit,1350633600
-Control9=IDC_SELECT_PROXY,button,1342242816
-Control10=IDC_RADIO_VERSION1,button,1342308361
-Control11=IDC_RADIO_VERSION_2C,button,1342177289
-Control12=IDC_EDIT_COMMUNITY,edit,1350631552
-Control13=IDC_STATIC,static,1342308352
-Control14=IDC_EDIT_ID,edit,1350633600
+Control7=IDC_BUTTON_GENERATE,button,1342242816
+Control8=IDC_EDIT_PORT,edit,1350639744
+Control9=IDC_CHECK_ENCRYPTION,button,1342242819
+Control10=IDC_EDIT_PROXY,edit,1350633600
+Control11=IDC_SELECT_PROXY,button,1342242816
+Control12=IDC_RADIO_VERSION1,button,1342308361
+Control13=IDC_RADIO_VERSION_2C,button,1342177289
+Control14=IDC_EDIT_COMMUNITY,edit,1350631552
 Control15=IDC_STATIC,static,1342308352
-Control16=IDC_STATIC,static,1342308352
+Control16=IDC_EDIT_ID,edit,1350633600
 Control17=IDC_STATIC,static,1342308352
 Control18=IDC_STATIC,static,1342308352
 Control19=IDC_STATIC,static,1342308352
 Control20=IDC_STATIC,static,1342308352
 Control21=IDC_STATIC,static,1342308352
-Control22=IDC_STATIC,button,1342177287
-Control23=IDC_STATIC,button,1342177287
+Control22=IDC_STATIC,static,1342308352
+Control23=IDC_STATIC,static,1342308352
 Control24=IDC_STATIC,button,1342177287
-Control25=IDC_STATIC,static,1342308352
+Control25=IDC_STATIC,button,1342177287
+Control26=IDC_STATIC,button,1342177287
+Control27=IDC_STATIC,static,1342308352
 
 [CLS:CNodePropsGeneral]
 Type=0
