@@ -1186,29 +1186,32 @@ BEGIN
                     ES_READONLY
     PUSHBUTTON      "...",IDC_SELECT_IP,265,25,14,14
     EDITTEXT        IDC_EDIT_OID,51,51,228,14,ES_AUTOHSCROLL | ES_READONLY
-    COMBOBOX        IDC_COMBO_AUTH,14,102,126,120,CBS_DROPDOWNLIST | 
+    COMBOBOX        IDC_COMBO_AUTH,14,102,131,120,CBS_DROPDOWNLIST | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_EDIT_SECRET,66,121,74,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_PORT,66,139,74,14,ES_AUTOHSCROLL | ES_NUMBER
-    EDITTEXT        IDC_EDIT_PROXY,13,167,109,14,ES_AUTOHSCROLL | 
+    EDITTEXT        IDC_EDIT_SECRET,39,121,73,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "&RND",IDC_BUTTON_GENERATE,117,121,28,14
+    EDITTEXT        IDC_EDIT_PORT,39,140,34,14,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "&Force encryption",IDC_CHECK_ENCRYPTION,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,79,142,66,10
+    EDITTEXT        IDC_EDIT_PROXY,13,167,113,14,ES_AUTOHSCROLL | 
                     ES_READONLY
-    PUSHBUTTON      "...",IDC_SELECT_PROXY,126,167,14,14
-    CONTROL         "Use version 1",IDC_RADIO_VERSION1,"Button",
-                    BS_AUTORADIOBUTTON | WS_GROUP,162,107,59,10
-    CONTROL         "Use version 2c",IDC_RADIO_VERSION_2C,"Button",
-                    BS_AUTORADIOBUTTON,162,120,63,10
-    EDITTEXT        IDC_EDIT_COMMUNITY,162,149,115,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "...",IDC_SELECT_PROXY,131,167,14,14
+    CONTROL         "Use version &1",IDC_RADIO_VERSION1,"Button",
+                    BS_AUTORADIOBUTTON | WS_GROUP,164,107,59,10
+    CONTROL         "Use version &2c",IDC_RADIO_VERSION_2C,"Button",
+                    BS_AUTORADIOBUTTON,164,120,63,10
+    EDITTEXT        IDC_EDIT_COMMUNITY,164,149,114,14,ES_AUTOHSCROLL
     LTEXT           "Object ID",IDC_STATIC,12,18,31,8
     EDITTEXT        IDC_EDIT_ID,51,15,38,14,ES_AUTOHSCROLL | ES_READONLY
     LTEXT           "Primary IP address",IDC_STATIC,168,15,59,8
     LTEXT           "Name",IDC_STATIC,12,36,20,8
     LTEXT           "SNMP OID",IDC_STATIC,12,54,36,8
     LTEXT           "Authentication method",IDC_STATIC,14,92,72,8
-    LTEXT           "Shared secret",IDC_STATIC,14,124,45,8
-    LTEXT           "Port number",IDC_STATIC,14,142,39,8
-    LTEXT           "Community string",IDC_STATIC,162,138,54,8
-    GROUPBOX        "NetXMS Agent",IDC_STATIC,7,80,139,108
-    GROUPBOX        "SNMP",IDC_STATIC,156,80,129,107
+    LTEXT           "Secret",IDC_STATIC,14,124,22,8
+    LTEXT           "Port",IDC_STATIC,14,143,14,8
+    LTEXT           "Community string",IDC_STATIC,164,138,54,8
+    GROUPBOX        "NetXMS Agent",IDC_STATIC,7,80,146,108
+    GROUPBOX        "SNMP",IDC_STATIC,158,80,127,107
     GROUPBOX        "General",IDC_STATIC,7,7,278,70
     LTEXT           "Proxy",IDC_STATIC,14,157,18,8
 END
